--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
