--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_DB_URI=
-PORT=
+MONGO_DB_URI=mongodb+srv://yanuar:yanuar@cluster0.tz0cf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5555
+JWT_SECRET=awikwok
