--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 MONGO_DB_URI=mongodb+srv://yanuar:yanuar@cluster0.tz0cf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5555
 JWT_SECRET=awikwok
+FRONTEND_URL=http://localhost:3000
